Fixed puzzle jumping on resize issue.

--- a/src/views/Puzzle/Puzzle.styl
+++ b/src/views/Puzzle/Puzzle.styl
@@ -67,6 +67,7 @@ puzzle-controls-width=400px
         overflow-y: visible;
         overflow-x: visible;
         align-self: center;
+        min-height: 100vh;
     }
 
     .btn-container {
